--- a/SETUP/Makefile
+++ b/SETUP/Makefile
@@ -22,24 +22,24 @@ login: ## Run GCloud and Pulumi logins
 	gcloud auth application-default login
 
 init: ## Create google project and pulumi stack
-	gcloud projects create missoula-mt-council-data --set-as-default
-	pulumi stack init missoula-mt-council-data
+	gcloud projects create missoula-council-data-proj --set-as-default
+	pulumi stack init missoula-council-data-proj
 
 set-cors: ## Set cors for the bucket
-	gsutil cors set cors.json gs://missoula-mt-council-data.appspot.com/
+	gsutil cors set cors.json gs://missoula-council-data-proj.appspot.com/
 
 destroy: ## Fully teardown Pulumi and GCloud
-	pulumi stack rm missoula-mt-council-data --force
-	gcloud projects deletemissoula-mt-council-data 
-	rm -f .keys/missoula-mt-council-data.json
+	pulumi stack rm missoula-council-data-proj --force
+	gcloud projects delete missoula-council-data-proj
+	rm -f .keys/missoula-council-data-proj.json
 
 gen-key: ## Generate a service account JSON
 	mkdir .keys/ -p
-	gcloud iam service-accounts create missoula-mt-council-data \
+	gcloud iam service-accounts create missoula-council-data-proj \
     	--description="CDP Dev Service Account for $(USER)" \
-    	--display-name="missoula-mt-council-data"
-	gcloud projects add-iam-policy-binding missoula-mt-council-data \
-    	--member="serviceAccount:missoula-mt-council-data@missoula-mt-council-data.iam.gserviceaccount.com" \
+    	--display-name="missoula-council-data-proj"
+	gcloud projects add-iam-policy-binding missoula-council-data-proj \
+    	--member="serviceAccount:missoula-council-data-proj@missoula-council-data-proj.iam.gserviceaccount.com" \
 		--role="roles/owner"
-	gcloud iam service-accounts keys create .keys/missoula-mt-council-data.json \
-  		--iam-account "missoula-mt-council-data@missoula-mt-council-data.iam.gserviceaccount.com"
+	gcloud iam service-accounts keys create .keys/missoula-council-data-proj.json \
+  		--iam-account "missoula-council-data-proj@missoula-council-data-proj.iam.gserviceaccount.com"
