--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -9,28 +9,28 @@ on:
     # https://pubs.opengroup.org/onlinepubs/9699919799/utilities/crontab.html#tag_20_25_07
     # Run every Monday at 23:26:00 UTC (Monday at 15:26:00 PST)
     # We offset from the hour and half hour to go easy on the servers :)
-    - cron: "26 23 * * 1"
+    - cron: '26 23 * * 1'
 
 jobs:
   deploy-infra:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v1
-        with:
-          python-version: 3.9
-      - name: Install Dependencies
-        run: |
-          cd infra/
-          pip install -r requirements.txt
-      - name: Run Infrastructure Deploy
-        uses: pulumi/actions@v3
-        with:
-          command: up
-          parallel: 4
-          stack-name: missoula-mt-council-data
-          work-dir: infra/
-        env:
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v1
+      with:
+        python-version: 3.9
+    - name: Install Dependencies
+      run: |
+        cd infra/
+        pip install -r requirements.txt
+    - name: Run Infrastructure Deploy
+      uses: pulumi/actions@v3
+      with:
+        command: up
+        parallel: 4
+        stack-name: missoula-council-data-proj
+        work-dir: infra/
+      env:
+        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
