--- a/cookiecutter.yaml
+++ b/cookiecutter.yaml
@@ -5,8 +5,8 @@ default_context:
     python_municipality_slug: "missoula"
     infrastructure_slug: "missoula-council-data-proj"
     maintainer_or_org_full_name: "Smai Fullerton"
-    hosting_github_username_or_org: "smai-f"
+    hosting_github_username_or_org: "OpenMontana"
     hosting_github_repo_name: "missoula-council-data-project"
-    hosting_github_url: "https://github.com/smai-f/missoula-council-data-project"
-    hosting_web_app_address: "https://smai-f.github.io/missoula-council-data-project"
+    hosting_github_url: "https://github.com/OpenMontana/missoula-council-data-project"
+    hosting_web_app_address: "https://OpenMontana.github.io/missoula-council-data-project"
     firestore_region: "us-central"
