Upgrade to cookiecutter v3.1.3

--- a/cookiecutter.yaml
+++ b/cookiecutter.yaml
@@ -1,5 +1,6 @@
 default_context:
     municipality: "Missoula"
+    iana_timezone: "America/Denver"
     governing_body_type: "city council"
     municipality_slug: "missoula"
     python_municipality_slug: "missoula"
