--- a/cookiecutter.yaml
+++ b/cookiecutter.yaml
@@ -11,3 +11,5 @@ default_context:
     hosting_github_url: "https://github.com/OpenMontana/missoula-council-data-project"
     hosting_web_app_address: "https://OpenMontana.github.io/missoula-council-data-project"
     firestore_region: "us-central"
+    event_gather_timedelta_lookback_days: 2
+    event_gather_cron: "7 9,21 * * *"
