--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -9,47 +9,47 @@ on:
     # https://pubs.opengroup.org/onlinepubs/9699919799/utilities/crontab.html#tag_20_25_07
     # Run every Monday at 23:26:00 UTC (Monday at 15:26:00 PST)
     # We offset from the hour and half hour to go easy on the servers :)
-    - cron: '26 23 * * 1'
+    - cron: "26 23 * * 1"
 
 jobs:
   build-python:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v1
-      with:
-        python-version: '3.10'
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v1
+        with:
+          python-version: "3.10"
 
-    - name: Install Packages
-      run: |
-        sudo apt update
-        sudo apt-get install ffmpeg --fix-missing
+      - name: Install Packages
+        run: |
+          sudo apt update
+          sudo apt-get install ffmpeg --fix-missing
 
-    - name: Install Python Dependencies
-      run: |
-        cd python/
-        pip install .[test]
-    - name: Lint and Format Python
-      run: |
-        cd python/
-        flake8 cdp_missoula_backend --count --verbose --show-source --statistics
-        black --check cdp_missoula_backend
+      - name: Install Python Dependencies
+        run: |
+          cd python/
+          pip install .[test]
+
+      - name: Ruff Check
+        run: |
+          cd python/
+          ruff check cdp_missoula_backend
 
   build-web:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '16.x'
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "16.x"
 
-    - name: Install Web App Dependencies
-      run: |
-        cd web/
-        npm i
-    - name: Build Web App
-      run: |
-        cd web/
-        npm run build
+      - name: Install Web App Dependencies
+        run: |
+          cd web/
+          npm i
+      - name: Build Web App
+        run: |
+          cd web/
+          npm run build
