--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -10,40 +10,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v1
-      with:
-        python-version: '3.10'
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v1
+        with:
+          python-version: "3.10"
 
-    - name: Install Packages
-      run: |
-        sudo apt update
-        sudo apt-get install ffmpeg --fix-missing
+      - name: Install Packages
+        run: |
+          sudo apt update
+          sudo apt-get install ffmpeg --fix-missing
 
-    - name: Install Python Dependencies
-      run: |
-        cd python/
-        pip install .[test]
+      - name: Install Python Dependencies
+        run: |
+          cd python/
+          pip install .[test]
 
-    - name: Ruff Check
-      run: |
-        cd python/
-        ruff check cdp_missoula_backend
+      - name: Ruff Check
+        run: |
+          cd python/
+          ruff check cdp_missoula_backend
 
   build-web:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '16.x'
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "16.x"
 
-    - name: Install Web App Dependencies
-      run: |
-        cd web/
-        npm i
-    - name: Build Web App
-      run: |
-        cd web/
-        npm run build
+      - name: Install Web App Dependencies
+        run: |
+          cd web/
+          npm i
+      - name: Build Web App
+        run: |
+          cd web/
+          npm run build
