--- a/.github/workflows/event-gather-pipeline.yml
+++ b/.github/workflows/event-gather-pipeline.yml
@@ -1,74 +1,117 @@
 name: Event Gather
 
 on:
-  push:
-    branches:
-      - main
   schedule:
-    # <minute [0,59]> <hour [0,23]> <day of the month [1,31]> <month of the year [1,12]> <day of the week [0,6]>
-    # https://pubs.opengroup.org/onlinepubs/9699919799/utilities/crontab.html#tag_20_25_07
-    - cron: '7 9,21 * * *'
+    # https://crontab.guru/#0_12_*_*_*
+    - cron: "0 12 * * *" # 12:00 UTC (06:00 MST)
   workflow_dispatch:
     inputs:
       from:
         description: "Optional ISO formatted string for datetime to begin event gather from."
         required: false
-        default: ""  # Will get converted to N (default 2) days prior
       to:
         description: "Optional ISO formatted string for datetime to end event gather at."
         required: false
-        default: ""  # Will get converted to now
 
+permissions:
+  id-token: write
+  contents: write
+  pull-requests: write
 
 jobs:
-  process-events:
+  deploy-runner-on-gcp:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup CML
+        uses: iterative/setup-cml@v1
+      - name: Create Runner
+        uses: nick-fields/retry@v2
+        env:
+          REPO_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          GOOGLE_APPLICATION_CREDENTIALS_DATA: ${{ secrets.GOOGLE_CREDENTIALS }}
+        with:
+          timeout_minutes: 15
+          max_attempts: 4
+          retry_wait_seconds: 600
+          command: >-
+            cml runner \
+              --single \
+              --labels=gcp-cdp-runner \
+              --cloud=gcp \
+              --cloud-region=us-west1-b \
+              --cloud-type=n1-standard-4 \
+              --cloud-gpu=nvidia-tesla-t4 \
+              --cloud-hdd-size=64 \
+              --idle-timeout=600
+
+  process-events:
+    needs: [deploy-runner-on-gcp]
+    runs-on: [self-hosted, gcp-cdp-runner]
+    container:
+      image: ghcr.io/iterative/cml:0-dvc2-base1-gpu
+      options: --gpus all
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v1
-      with:
-        python-version: '3.10'
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
 
-    - name: Install Packages
-      run: |
-        sudo apt update
-        sudo apt -m -f install ffmpeg libu2f-udev
+      - name: Check GPU Drivers
+        run: |
+          nvidia-smi
 
-    - name: Install Google Chrome
-      run: |
-        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-        sudo dpkg -i google-chrome-stable_current_amd64.deb
+      - name: Install Packages
+        run: |
+          sudo apt update
+          sudo apt-get -m -f install -y \
+            libu2f-udev \
+            libsndfile1 \
+            ffmpeg
 
-    - name: Install Python Dependencies
-      run: |
-        cd python/
-        pip install .
+      # Google Chrome is required by webdriver_manager
+      - name: Install Google Chrome
+        run: |
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo dpkg -i google-chrome-stable_current_amd64.deb
 
-    - name: Setup gcloud
-      uses: google-github-actions/setup-gcloud@v0
-      with:
-        project_id: missoula-council-data-proj
-        service_account_key: ${{ secrets.GOOGLE_CREDENTIALS }}
-        export_default_credentials: true
+      - name: Install Python Dependencies
+        run: |
+          cd python/
+          pip install --upgrade pip
+          pip install .
 
-    - name: Dump Credentials to JSON
-      run: |
-        echo "$GOOGLE_CREDS" > python/google-creds.json
-      env:
-        GOOGLE_CREDS: ${{ secrets.GOOGLE_CREDENTIALS }}
+      - name: Setup gcloud
+        uses: google-github-actions/setup-gcloud@v0
+        with:
+          project_id: missoula-council-data-proj
+          service_account_key: ${{ secrets.GOOGLE_CREDENTIALS }}
+          export_default_credentials: true
 
-    - name: Gather and Process New Events - CRON
-      if: ${{ github.event_name == 'schedule' }}
-      run: |
-        cd python/
-        run_cdp_event_gather event-gather-config.json --parallel
+      - name: Dump Credentials to JSON
+        uses: jsdaniell/create-json@v1.2.2
+        with:
+          name: "google-creds.json"
+          json: ${{ secrets.GOOGLE_CREDENTIALS }}
+          dir: "python/"
 
-    - name: Gather and Process Requested Events - Manual
-      if: ${{ github.event_name == 'workflow_dispatch' }}
-      run: |
-        cd python/
-        run_cdp_event_gather event-gather-config.json \
-          --from ${{ github.event.inputs.from }} \
-          --to ${{ github.event.inputs.to }} \
-          --parallel
+      - name: Gather and Process New Events - CRON
+        if: ${{ github.event_name == 'schedule' }}
+        run: |
+          cd python/
+          run_cdp_event_gather event-gather-config.json
+
+      - name: Gather and Process Requested Events - Manual
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        run: |
+          cd python/
+          CDP_FROM_USER=${{ github.event.inputs.from }}
+          CDP_FROM_DEFAULT=$(date -Iseconds -d "2 days ago")
+          CDP_FROM=${CDP_FROM_USER:-$CDP_FROM_DEFAULT}
+          CDP_TO_USER=${{ github.event.inputs.to }}
+          CDP_TO_DEFAULT=$(date -Iseconds)
+          CDP_TO=${CDP_TO_USER:-$CDP_TO_DEFAULT}
+          run_cdp_event_gather event-gather-config.json \
+            --from $CDP_FROM \
+            --to $CDP_TO
