--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -15,36 +15,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v1
-      with:
-        python-version: '3.10'
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v1
+        with:
+          python-version: "3.11"
 
-    - name: Install Packages
-      run: |
-        sudo apt update
-        sudo apt-get install ffmpeg --fix-missing
+      - name: Install Packages
+        run: |
+          sudo apt update
+          sudo apt-get install ffmpeg --fix-missing
 
-    - name: Install Python Dependencies
-      run: |
-        cd python/
-        pip install .
+      - name: Install Python Dependencies
+        run: |
+          cd python/
+          pip install .
 
-    - name: Setup gcloud
-      uses: google-github-actions/setup-gcloud@v0
-      with:
-        project_id: missoula-council-data-proj
-        service_account_key: ${{ secrets.GOOGLE_CREDENTIALS }}
-        export_default_credentials: true
+      - name: Setup gcloud
+        uses: google-github-actions/setup-gcloud@v0
+        with:
+          project_id: missoula-council-data-proj
+          service_account_key: ${{ secrets.GOOGLE_CREDENTIALS }}
+          export_default_credentials: true
 
-    - name: Dump Credentials to JSON
-      run: |
-        echo "$GOOGLE_CREDS" > python/google-creds.json
-      env:
-        GOOGLE_CREDS: ${{ secrets.GOOGLE_CREDENTIALS }}
-    
-    - name: Run Command
-      if: ${{ github.event_name == 'workflow_dispatch' }}
-      run: |
-        cd python/
-        ${{ github.event.inputs.command-and-args }}
+      - name: Dump Credentials to JSON
+        uses: jsdaniell/create-json@v1.2.2
+        with:
+          name: "google-creds.json"
+          json: ${{ secrets.GOOGLE_CREDENTIALS }}
+          dir: "python/"
+
+      - name: Run Command
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        run: |
+          cd python/
+          ${{ github.event.inputs.command-and-args }}
